samples/_failures_safe/1761459096_a1f0ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a244ac85.c: In function ‘main’:
./samples/SAFE/__tmp_a244ac85.c:152:20: error: ‘EXIT_FAIL’ undeclared (first use in this function); did you mean ‘EXIT_FAILURE’?
  152 |             return EXIT_FAIL
      |                    ^~~~~~~~~
      |                    EXIT_FAILURE
./samples/SAFE/__tmp_a244ac85.c:152:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a244ac85.c:152:29: error: expected ‘;’ at end of input
  152 |             return EXIT_FAIL
      |                             ^
      |                             ;
./samples/SAFE/__tmp_a244ac85.c:152:13: error: expected declaration or statement at end of input
  152 |             return EXIT_FAIL
      |             ^~~~~~
./samples/SAFE/__tmp_a244ac85.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a244ac85.c:152:13: error: expected declaration or statement at end of input
